--- a/sass/test.scss
+++ b/sass/test.scss
@@ -12,15 +12,18 @@ body {
     width: 100%;
     padding: 0 15px;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .top-wrapper {
-    padding: 200px 0 200px 0;
+    padding: 200px 0;
+    width: 100%;
     background-image: url(../images/Background.png);
     background-size: cover;
     text-align: center;
     color: white;
     font-family: sans-serif;
+    position: relative;
 }
 
 .top-wrapper h1 {
@@ -36,20 +39,29 @@ body {
 }
 
 .header-left {
-    padding-left: 200px;
-    padding-top: 60px;
-    float: left;
     font-size: 15px;
     font-family: sans-serif;
+    display: flex;
+    justify-content: flex-start;
+    position: absolute;
+    top: 80px;
+    left: 200px;
 }
 
 .header-right {
-    padding-right: 200px;
-    padding-top: 60px;
-    display: inline-block;
-    float: right;
     font-size: 15px;
     font-family: sans-serif;
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    top: 80px;
+    right: 200px;
+}
+
+.header-txt {
+    display: inline-block;
+    text-align: center;
+    width: 1000px;
 }
 
 a {
@@ -84,17 +96,15 @@ a {
   }
 
   .works {
-      padding: 10px 100px;
-  }
-
-  .work {
-    float: left;
-    width: 33%;
+    padding: 10px 0;
+    width: 1000px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
   }
 
   .work-wrapper {
-    height: 500px;
-    padding: 100px 80px;
+    padding: 10px 0;
     background-color: #f7f7f7;
     text-align: center;
   }
@@ -110,7 +120,7 @@ a {
   .top-txt {
     position: absolute;
     top: 190px;
-    left: 90px;
+    left: 50px;
     padding: 3px 20px;
     border-radius: 20px;
     color: white;
@@ -124,7 +134,7 @@ a {
   .title-txt {
     position: absolute;
     top: 210px;
-    left: 90px;
+    left: 50px;
     letter-spacing: 2px;
     width: 100%;
     color: white;
@@ -136,7 +146,7 @@ a {
   .txt-contents {
     position: absolute;
     top: 290px;
-    left: 90px;
+    left: 50px;
     width: 100%;
     color: white;
     letter-spacing: 1px;
@@ -148,22 +158,19 @@ a {
       color: black;
       font-family: sans-serif;
       font-weight: 200;
-      margin-top: 0;
+      margin-top: 20px;
   }
 
   .partners {
-    padding: 10px 300px;
-}
-
-.partner {
-  float: left;
-  width: 25%;
+    padding: 20px 0;
+    width: 1000px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
 }
 
 .partner-wrapper {
-  height: 620px;
-  padding-top: 150px;
-  padding-bottom: 120px;
+  padding: 20px 0;
   background-color: #f7f7f7;
   text-align: center;
 }
@@ -239,7 +246,7 @@ a {
     clear: both;
     padding: 50px;
     margin:  0 auto;
-    width: 18%;
+    width: 100%;
 }
 
 .other-partner a {
@@ -257,28 +264,20 @@ a {
 }
 
 .activity-wrapper {
-    padding: 200px;
-    padding-top: 0;
-    padding-bottom: 20px;
+    padding: 20px 0;
     text-align: center;
     background-color: #f7f7f7;
 }
 
 .activities {
-    padding: 150px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 20px 0;
+    width: 950px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     text-align: center;
-    justify-content: center;
     grid-gap: 10px 0px;
-}
-
-.activities img {
-    display: flex;
-    margin: 0;
+    margin: 0 auto;
 }
 
 .activity-icon {
@@ -384,18 +383,18 @@ a {
 }
 
 .form-wrapper {
-    height: 500px;
-    padding-top: 40px;
+    padding-top: 20px 0;
     background-color: #f7f7f7;
     text-align: center;
+    margin: 0 auto;
 }
 
 .form-wrapper h1 {
     font-family: sans-serif;
     font-weight: 100;
     font-size: 25px;
-    display: inline-block;
-    text-align: center;
+    width: 950px;
+    margin: 0 auto;
 }
 
 .form-wrapper p {
@@ -403,7 +402,9 @@ a {
     font-weight: 100;
     font-size: 20px;
     padding-top: 15px;
+    width: 950px;
     color: gray;
+    margin: 0 auto;
 }
 
 .form-wrapper a {
@@ -413,6 +414,7 @@ a {
     font-size: 12px;
     color: white;
     padding: 3px 30px;
+    width: 950px;
     border: 8px solid #FF6666;
     border-radius: 70px;
 }
@@ -422,8 +424,10 @@ a {
 }
 
 .forms {
+    padding: 30px 0;
     display: inline-block;
     text-align: center;
+    width: 950px;
 }
 
 .txt-form {
@@ -431,27 +435,23 @@ a {
 }
 
 .footer-wrapper {
-    height: 260px;
-    padding-top: 10px;
+    padding-top: 10px 0;
     background-color: #f7f7f7;
     text-align: center;
-    margin-top: 0px;
     border-top: solid 2px #FF6666;
 }
 
 .footers {
-    padding: 10px 300px;
-}
-
-.footer-txt {
-    display: inline-block;
-    text-align: center;
-    float: left;
-    width: 25%;
+    padding: 20px 0;
+    display: flex;
+    justify-content: center;
+    width: 1000px;
+    margin: 0 auto;
 }
 
 .footer-txt ul {
     list-style: none;
+    margin: 0 auto;
 }
 
 ul li {
@@ -469,12 +469,12 @@ ul li:hover {
     opacity: 0.5;
 }
 
-ul {
-    margin-top: 0;
-}
-
 .company {
     padding-right: 125px;
+}
+
+.comp {
+    padding-right: 30px;
 }
 
 .dreamshare {
